# letterpress-web

./: .gitmodules  package-lock.json  package.json  svelte.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yaml
letterpress-wasm/: .gitignore  CMakeLists.txt  README.md  build.sh  calc.cpp  setup.sh
src/lib/: monaco.ts
src/lib/components/: bla_editor.svelte  editor.svelte  logs.svelte  pdfviewer.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/editor/: +page.server.js  +page.svelte
